# nba_data_pull

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linter.yaml
scripts/: upload_local.py
src/data_pull/: dataingest.py  get_data.py  get_data_to_pull.py
src/inventory/: create_inventory.py  inventory_utils.py
src/nba_data_pull/data_pull/: dataingest.py  get_data.py
src/nba_data_pull/inventory/: create_inventory.py  inventory_utils.py
tests/: conftest.py
tests/inventory/: test_create_inventory.py
