[project]
name = "nba-data-pull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nbastatpy>=0.1.8",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.6",
]
