[project]
name = "nba-data-pull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.10.5",
    "boto3>=1.36.23",
    "loguru>=0.7.3",
    "nbastatpy>=0.1.8",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "s3fs>=2025.2.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.9.6",
]

[project.scripts]
example-pkg = "nba_data_pull:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nba_data_pull"]
